--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /backend/src/analysis_manager/__pycache__/__init__.cpython-310.pyc
 *.cpython-310.pyc
 /backend/src/interview_manager/permanent_storage/
-/backend/src/audio_processor/uploads/
 .idea/
 /backend/app.db
-backend/.env
+backend/.envbackend/.env
+/backend/.env
