--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,57 +3,59 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "@hookform/resolvers": "^3.3.1",
-      "@radix-ui/react-alert-dialog": "^1.0.5",
-      "@radix-ui/react-avatar": "^1.0.4",
-      "@radix-ui/react-dialog": "^1.0.5",
-      "@radix-ui/react-dropdown-menu": "^2.0.6",
-      "@radix-ui/react-icons": "^1.3.0",
-      "@radix-ui/react-label": "^2.0.2",
-      "@radix-ui/react-progress": "^1.0.3",
-      "@radix-ui/react-select": "^1.2.2",
-      "@radix-ui/react-separator": "^1.0.3",
-      "@radix-ui/react-slot": "^1.0.2",
-      "@radix-ui/react-tabs": "^1.0.4",
-      "@radix-ui/react-toast": "^1.1.5",
-      "@tanstack/react-query": "^4.35.3",
-      "@tanstack/react-table": "^8.10.1",
-      "axios": "^1.5.1",
-      "class-variance-authority": "^0.7.0",
-      "clsx": "^2.0.0",
-      "date-fns": "^2.30.0",
-      "lucide-react": "^0.279.0",
-      "next": "^13.5.2",
-      "next-auth": "^4.23.1",
-      "next-themes": "^0.2.1",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-dropzone": "^14.2.3",
-      "react-hook-form": "^7.46.2",
-      "react-textarea-autosize": "^8.5.3",
-      "sonner": "^1.0.3",
-      "tailwind-merge": "^1.14.0",
-      "tailwindcss-animate": "^1.0.7",
-      "zod": "^3.22.2",
-      "zustand": "^4.4.1"
+        "@hookform/resolvers": "^3.10.0",
+        "@radix-ui/react-alert-dialog": "^1.1.6",
+        "@radix-ui/react-avatar": "^1.1.3",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-progress": "^1.1.2",
+        "@radix-ui/react-scroll-area": "^1.2.3",
+        "@radix-ui/react-select": "^1.2.2",
+        "@radix-ui/react-separator": "^1.1.2",
+        "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-tabs": "^1.1.3",
+        "@radix-ui/react-toast": "^1.1.5",
+        "@tanstack/react-query": "^4.35.3",
+        "@tanstack/react-table": "^8.10.1",
+        "axios": "^1.5.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^2.30.0",
+        "lucide-react": "^0.482.0",
+        "next": "^13.5.2",
+        "next-auth": "^4.23.1",
+        "next-themes": "^0.2.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-dropzone": "^14.2.3",
+        "react-hook-form": "^7.54.2",
+        "react-textarea-autosize": "^8.5.3",
+        "shadcn-ui": "^0.9.5",
+        "sonner": "^1.7.4",
+        "tailwind-merge": "^1.14.0",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.24.2",
+        "zustand": "^4.4.1"
     },
     "devDependencies": {
-      "@types/node": "^20.6.3",
-      "@types/react": "^18.2.22",
-      "@types/react-dom": "^18.2.7",
-      "autoprefixer": "^10.4.16",
-      "eslint": "^8.49.0",
-      "eslint-config-next": "^13.5.2",
-      "postcss": "^8.4.30",
-      "prettier": "^3.0.3",
-      "prettier-plugin-tailwindcss": "^0.5.4",
-      "tailwindcss": "^3.3.3",
-      "typescript": "^5.2.2"
+        "@types/node": "^20.6.3",
+        "@types/react": "^18.2.22",
+        "@types/react-dom": "^18.2.7",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.49.0",
+        "eslint-config-next": "^13.5.2",
+        "postcss": "^8.4.30",
+        "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.5.4",
+        "tailwindcss": "^3.3.3",
+        "typescript": "^5.2.2"
     }
-  }
+}
