--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ frontend/node_modules/
 frontend/.next/
 .idea/
 .env
+empty_files_list.txt
+find_empty_files.sh
+extracted_code.txt
+extract_code.sh
+setup-echoquest.sh
