switched from openai whisper to assemblyai

--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,12 @@ JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# OpenAI API (required for transcription and chat)
-OPENAI_API_KEY=your-openai-api-key
+# AssemblyAI for speech-to-text with diarization (required)
+ASSEMBLY_API_KEY=your-assemblyai-api-key
 
-# Optional: AssemblyAI for alternative transcription
-ASSEMBLYAI_API_KEY=your-assemblyai-api-key
+# OpenAI API (recommended for chat functionality and embeddings)
+# Uncomment and add your key to enable chat and question answering features
+# OPENAI_API_KEY=your-openai-api-key
 
 # Redis
 REDIS_URL=redis://redis:6379/0
