--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ ACCESS_TOKEN_EXPIRE_MINUTES=60
 REFRESH_TOKEN_EXPIRE_DAYS=7
 
 # AssemblyAI for speech-to-text with diarization (required)
-ASSEMBLY_API_KEY=your-assemblyai-api-key
+# ASSEMBLY_API_KEY=your-assemblyai-api-key
 
-# OpenAI API (recommended for chat functionality and embeddings)
+# OpenAI API (required for transcription and chat functionality)
 # Uncomment and add your key to enable chat and question answering features
 # OPENAI_API_KEY=your-openai-api-key
 
