--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,24 @@
 /backend/app.db
 backend/.envbackend/.env
 /backend/.env
+.specstory/
+frontend/node_modules/
+frontend/.next/
+.idea/
+.env
+empty_files_list.txt
+find_empty_files.sh
+extracted_code.txt
+extract_code.sh
+setup-echoquest.sh
+data/
+/backend/src/audio_processor/temp/
+/backend/src/audio_processor/uploads/
+/backend/src/analysis_manager/__pycache__/__init__.cpython-310.pyc
+*.cpython-310.pyc
+/backend/src/interview_manager/permanent_storage/
+.idea/
+/backend/app.db
+backend/.envbackend/.env
+/backend/.env
+*.pyc
